--- a/tests/templates/kuttl/fault-tolerant-execution/04-copy-scripts.yaml
+++ b/tests/templates/kuttl/fault-tolerant-execution/04-copy-scripts.yaml
@@ -2,4 +2,4 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 commands:
-  - script: kubectl cp -n $NAMESPACE check-fte.py trino-test-helper-0:/tmp/
+  - script: kubectl cp -n $NAMESPACE 04_check-fte.py trino-test-helper-0:/tmp/
