chore: MinIO legacy charts and updated version

--- a/tests/templates/kuttl/fault-tolerant-execution/05-run-tests.yaml
+++ b/tests/templates/kuttl/fault-tolerant-execution/05-run-tests.yaml
@@ -7,7 +7,8 @@ commands:
   # Verify that the exchange bucket contains data
   - script: |
       sleep 10
-      count=$(kubectl exec -n $NAMESPACE deployment/minio -- mc stat local/exchange-bucket | awk '/Objects count:/ {print $3}')
+      kubectl exec -n $NAMESPACE deployment/minio -- mc alias set local https://localhost:9000 minioAccessKey minioSecretKey --api S3v4
+      count=$(kubectl exec -n $NAMESPACE deployment/minio -- mc stat --insecure local/exchange-bucket | awk '/Objects count:/ {print $3}')
       if [ "$count" -gt 0 ]; then
         echo "Objects count is $count (> 0)"
       else
