fix: integration test fixes

--- a/tests/templates/kuttl/fault-tolerant-execution/05-assert.yaml
+++ b/tests/templates/kuttl/fault-tolerant-execution/05-assert.yaml
@@ -2,6 +2,18 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
 timeout: 300
+commands:
+  - script: kubectl exec -n $NAMESPACE trino-test-helper-0 -- python /tmp/check-active-workers.py -u admin -p "" -c trino-fte-coordinator -w 2
+  # Verify that the exchange bucket contains data
+  - script: |
+      kubectl exec -n $NAMESPACE deployment/minio -- mc alias set local https://localhost:9000 minioAccessKey minioSecretKey --api S3v4
+      count=$(kubectl exec -n $NAMESPACE deployment/minio -- mc stat --insecure local/exchange-bucket | awk '/Objects count:/ {print $3}')
+      if [ "$count" -gt 0 ]; then
+        echo "Objects count is $count (> 0)"
+      else
+        echo "Objects count is $count (not > 0)"
+        exit 1
+      fi
 ---
 apiVersion: apps/v1
 kind: StatefulSet
