--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -115,8 +115,8 @@ spec:
                         configOverrides:
                           additionalProperties:
                             type: string
-                          default: {}
                           description: The `configOverrides` allow overriding arbitrary client protocol properties.
+                          nullable: true
                           type: object
                         enabled:
                           description: Enable spooling protocol.
