--- a/tests/templates/kuttl/client-spooling/05-assert.yaml
+++ b/tests/templates/kuttl/client-spooling/05-assert.yaml
@@ -4,9 +4,9 @@ kind: TestAssert
 timeout: 300
 commands:
   - script: kubectl exec -n $NAMESPACE trino-test-helper -- python /tmp/check-active-workers.py -u admin -p "" -c trino-coordinator -w 2
+  - script: kubectl exec -n $NAMESPACE deployment/minio -- mc alias set local https://localhost:9000 minioAccessKey minioSecretKey --api S3v4
   # Verify that the spooling bucket contains data
   - script: |
-      kubectl exec -n $NAMESPACE deployment/minio -- mc alias set local https://localhost:9000 minioAccessKey minioSecretKey --api S3v4
       count=$(kubectl exec -n $NAMESPACE deployment/minio -- mc stat --insecure local/spooling-bucket | awk '/Objects count:/ {print $3}')
       if [ "$count" -gt 0 ]; then
         echo "Objects count is $count (> 0)"
