not all Trino versions support spooling

--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -117,7 +117,7 @@ tests:
       - openshift
   - name: client-spooling
     dimensions:
-      - trino
+      - trino-latest
       - openshift
   - name: listener
     dimensions:
