feat: add support for the client spooling protocol (#793)
* add new client protocol module

* update crd fields to match decision

* add spooling config to STS and some unit tests

* add kuttl test

* fix spool secret length

* integration test successful

* rename python script

* increase the number of rows to fetch from Trino

* update changelog

* update docs

* remove unused enum

* remove Optional from config_overrides

* remove the "enabled" property

* refactor crd to use spec.clusterConfig.clientProtocol.spooling

* remove clientProtocol.configOverrides field

* handle config overrides for spooling-manager.properties

* update docs

* use config-utils to resolve S3 credentials

* add comment to function

* revert the unsafe function

* fix merge and update test

* remove test timeout

* not all Trino versions support spooling

* Apply suggestions from code review

Co-authored-by: Sebastian Bernauer <sebastian.bernauer@stackable.de>

* remove leftovers

* remove `clusterConfig.faultTolerantExecution.configOverrides` property

* amend FTE changelog

* client_protocol: refactor s3 config into  crd::s3 and config::s3 to make it reusable

* fte: refactor to reuse crd::s3 anc move resolved struct out of the crd module

* Apply suggestions from code review

Co-authored-by: Sebastian Bernauer <sebastian.bernauer@stackable.de>

* remove unused imports after suggestion

* remove crd::s3 which included iam fields

* fte tests: replace inline structs with  indoc

* controller tests: apply PR review patch

* client-spooling: update schema for docs and tests

* Apply suggestions from code review

Co-authored-by: Sebastian Bernauer <sebastian.bernauer@stackable.de>

* client spooling: make s3 filesystem consistent with FTE backend

* ensure error message are lowercased

* client spooling: raise error for trino 451

---------

Co-authored-by: Sebastian Bernauer <sebastian.bernauer@stackable.de>

--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -115,6 +115,12 @@ tests:
     dimensions:
       - trino
       - openshift
+  - name: client-spooling
+    dimensions:
+      # The client spooling protocol was introduced in Trino 466 but it only works reliably starting with Trino 476.
+      # Long term we should test all versions
+      - trino-latest
+      - openshift
   - name: listener
     dimensions:
       - trino
