--- a/docs/modules/trino/examples/usage-guide/trino-secure-tls-only.yaml
+++ b/docs/modules/trino/examples/usage-guide/trino-secure-tls-only.yaml
@@ -46,18 +46,27 @@ spec:
           namespace: default
         autoGenerate: true
 ---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: hive-credentials
+type: Opaque
+stringData:
+  username: APP
+  password: mine
+---
 apiVersion: hive.stackable.tech/v1alpha1
 kind: HiveCluster
 metadata:
   name: simple-hive-derby
 spec:
   image:
-    productVersion: 4.0.0
+    productVersion: 4.1.0
   clusterConfig:
     database:
       connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
-      user: APP
-      password: mine
+      credentialsSecret: hive-credentials
       dbType: derby
   metastore:
     roleGroups:
