--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ built = { version = "0.8", features = ["chrono", "git2"] }
 clap = "4.5"
 const_format = "0.2"
 futures = { version = "0.3", features = ["compat"] }
+# We pin the kube version, as we use a patch for 2.0.1 below
+kube = "=2.0.1"
 indoc = "2.0"
 openssl = "0.10"
 rstest = "0.26"
@@ -33,3 +35,6 @@ tracing = "0.1"
 # [patch."https://github.com/stackabletech/operator-rs.git"]
 # stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
 # stackable-operator = { path = "../operator-rs/crates/stackable-operator" }
+
+[patch.crates-io]
+kube = { git = "https://github.com/stackabletech/kube-rs", branch = "2.0.1-fix-schema-hoisting" }
