--- a/tests/templates/kuttl/smoke_aws/20-install-check.yaml
+++ b/tests/templates/kuttl/smoke_aws/20-install-check.yaml
@@ -18,7 +18,7 @@ spec:
       # serviceAccount: integration-tests-sa
       containers:
         - name: trino-test-helper
-          image: oci.stackable.tech/sdp/testing-tools:0.2.0-stackable0.0.0-dev
+          image: oci.stackable.tech/sdp/testing-tools/trino:0.3.0-stackable0.0.0-dev
           command: ["sleep", "infinity"]
           resources:
             requests:
