--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -71,9 +71,6 @@ spec:
                         Learn more in the [Trino authorization usage guide](https://docs.stackable.tech/home/nightly/trino/usage-guide/security#authorization).
                       nullable: true
                       properties:
-                        disableColumnMasking:
-                          default: false
-                          type: boolean
                         opa:
                           description: |-
                             Configure the OPA stacklet [discovery ConfigMap](https://docs.stackable.tech/home/nightly/concepts/service_discovery)
@@ -87,6 +84,9 @@ spec:
                                 The [discovery ConfigMap](https://docs.stackable.tech/home/nightly/concepts/service_discovery)
                                 for the OPA stacklet that should be used for authorization requests.
                               type: string
+                            enableColumnMasking:
+                              default: true
+                              type: boolean
                             package:
                               description: The name of the Rego package containing the Rego rules for the product.
                               nullable: true
